--- a/modules/ptm_python/Dockerfile.amd64.debug
+++ b/modules/ptm_python/Dockerfile.amd64.debug
@@ -1,5 +1,9 @@
 FROM amd64/python:3.7-slim-buster
 
+# ruuvitag dependencies.
+RUN apt-get update \
+    && apt-get -y install bluetooth bluez sudo
+
 WORKDIR /app
 
 RUN pip install ptvsd==4.1.3
@@ -7,5 +11,9 @@ COPY requirements.txt ./
 RUN pip install -r requirements.txt
 
 COPY . .
+
+# For demo purposes, started as root to make sure 
+# there are no permission issues.
+USER root
 
 CMD [ "python3", "-u", "./main.py" ]
