--- a/modules/ptm_python/Dockerfile.arm32v7.debug
+++ b/modules/ptm_python/Dockerfile.arm32v7.debug
@@ -2,7 +2,7 @@ FROM arm32v7/python:3.7-slim-buster
 
 # ruuvitag dependencies.
 RUN apt-get update \
-    && apt-get -y install bluetooth bluez sudo
+    && apt-get -y install bluetooth bluez bluez-hcidump sudo
 
 WORKDIR /app
 
