--- a/modules/ptm_python/Dockerfile.arm32v7.debug
+++ b/modules/ptm_python/Dockerfile.arm32v7.debug
@@ -10,7 +10,7 @@ RUN pip install ptvsd==4.1.3
 COPY requirements.txt ./
 RUN pip install -r requirements.txt
 
-COPY . .
+COPY app .
 
 # For demo purposes, started as root to make sure 
 # there are no permission issues.
